# laba2OS

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  makefile  params  run.sh
includes/: env_utils.h
scripts/: README.md  build.sh  clean.sh  run.sh
src/: CMakeLists.txt  child  child.c  env_utils.c  main.c  makefile  parent  parent.c
